@@ -27,7 +27,7 @@ class TestFolderDefaultPage(LinguaPloneTestCase):
         self.setLanguage('de')
         self.folder.setDefaultPage(self.english.getId())
         result = self.folder.getDefaultPage()
-        self.failUnlessEqual(result, self.english.getId())
+        self.failUnlessEqual(result, self.german.getId())
 
     def testInvalidAsDefault(self):
         self.folder.setDefaultPage('pt')
@@ -72,7 +72,7 @@ class TestPortalDefaultPage(LinguaPloneTestCase):
         self.setLanguage('de')
         self.portal.setDefaultPage(self.english.getId())
         result = self.portal.getDefaultPage()
-        self.failUnlessEqual(result, self.english.getId())
+        self.failUnlessEqual(result, self.german.getId())
 
     def testInvalidAsDefault(self):
         self.folder.setDefaultPage('pt')
@@ -102,7 +102,7 @@ class TestIndexDefaultPage(LinguaPloneTestCase):
         self.setLanguage('de')
         self.folder.setDefaultPage(self.english.getId())
         result = self.folder.getDefaultPage()
-        self.failUnlessEqual(result, self.english.getId())
+        self.failUnlessEqual(result, self.german.getId())
 
     def testInvalidAsDefault(self):
         self.folder.setDefaultPage('pt')
