@@ -4,7 +4,8 @@ Changelog
 4.1.2 (unreleased)
 ------------------
 
-- Display the translation of the folder default page in the current language.
+- Display the translation of the folder default page in the current language
+  when the folder is not translated.
   [thomasdesvenain]
 
 
